--- a/src/main/webapp/weixin/front/templates/tabs.html
+++ b/src/main/webapp/weixin/front/templates/tabs.html
@@ -20,8 +20,8 @@ navigation history that also transitions its views in and out.
                 <ion-list>
                     <ion-item class="item-remove-animate item-icon-right" ng-repeat="orderdata in data" type="item-text-wrap" href="#/orderDetail/{{orderdata.id}}">
 
-                        <h2>{{orderdata.date}}</h2>
-                        <p>{{orderdata.state}}</p>
+                        <h2>{{orderdata.createTime}}</h2>
+                        <p>{{orderdata.status}}</p>
                         <i class="icon ion-chevron-right icon-accessory"></i>
 
                         <ion-option-button class="button-assertive" ng-click="remove(order)">
