--- a/src/main/webapp/weixin/front/templates/adminList.html
+++ b/src/main/webapp/weixin/front/templates/adminList.html
@@ -6,11 +6,11 @@
     </ion-nav-bar>
     <ion-content class="has-header">
        <ion-list>
-           <ion-item class="item item-icon-left item-icon-right" href="#/undoneOrder">
+           <ion-item class="item item-icon-left item-icon-right" href="#/admin/undoneOrder">
                <i class="icon ion-compass"></i>未完成订单
                <i class="icon ion-ios-arrow-right"></i>
            </ion-item>
-           <ion-item class="item item-icon-left item-icon-right" href="#/doneOrder">
+           <ion-item class="item item-icon-left item-icon-right" href="#/admin/doneOrder">
                <i class="icon ion-checkmark"></i>已完成订单
                <i class="icon ion-ios-arrow-right"></i>
            </ion-item>
