--- a/src/main/webapp/weixin/front/templates/admin/doneOrder.html
+++ b/src/main/webapp/weixin/front/templates/admin/doneOrder.html
@@ -16,11 +16,11 @@
                 <input type="text" ng-model="search" placeholder="搜索姓名或手机号">
             </div>
 
-            <ion-item class="item-remove-animate item-icon-right" ng-repeat="orderdata in doneOrderD | filter:search | orderBy:customer" type="item-text-wrap" href="#/orderDetail/{{orderdata.id}}">
+            <ion-item class="item-remove-animate item-icon-right" ng-repeat="orderdata in doneOrderD | filter:search | orderBy:weixinUserInfoId.nickname" type="item-text-wrap" href="#/orderDetail/{{orderdata.id}}">
 
-                {{orderdata.customer}}
-                <span class="item-note">{{orderdata.date}}</span>
-                <div ng-hide="true">{{orderdata.phone}}</div>
+                {{orderdata.weixinUserInfoId.nickname}}
+                <span class="item-note">{{orderdata.createTime}}</span>
+                <div>{{orderdata.tel}}</div>
                 <i class="icon ion-chevron-right icon-accessory"></i>
             </ion-item>
         </ion-list>
