--- a/src/main/webapp/weixin/front/templates/customer.html
+++ b/src/main/webapp/weixin/front/templates/customer.html
@@ -12,11 +12,10 @@
 
         <ion-list>
             <ion-item class="item-remove-animate item-icon-right" ng-repeat="customer in customerList | filter:search" type="item-text-wrap" href="#/customerDetail/{{customer.id}}">
-
-                {{customer.name}}
-                <span class="item-note">{{customer.phone}}</span>
+                <p>{{customer.username}}</p>
+                <p>{{customer.nickname}}</p>
+                <span class="item-note">{{customer.tel}}</span>
                 <i class="icon ion-chevron-right icon-accessory"></i>
-
                 <ion-option-button class="button-assertive" ng-click="remove(customer)">
                     删除
                 </ion-option-button>
