客户信息管理，员工信息查询，新增

--- a/src/main/webapp/weixin/front/templates/admin/adminList.html
+++ b/src/main/webapp/weixin/front/templates/admin/adminList.html
@@ -17,11 +17,11 @@
 
            <ion-item class="item item-divider"> </ion-item>
 
-           <ion-item class="item item-icon-left item-icon-right" href="#/customer">
+           <ion-item class="item item-icon-left item-icon-right" href="#/admin/customer">
                <i class="icon ion-ios-people"></i>客户管理
                <i class="icon ion-ios-arrow-right"></i>
            </ion-item>
-           <ion-item class="item item-icon-left item-icon-right" href="#/employ">
+           <ion-item class="item item-icon-left item-icon-right" href="#/admin/employ">
                <i class="icon ion-ios-person-outline"></i>员工管理
                <i class="icon ion-ios-arrow-right"></i>
            </ion-item>
