--- a/src/main/webapp/weixin/front/templates/admin/employDetail.html
+++ b/src/main/webapp/weixin/front/templates/admin/employDetail.html
@@ -11,7 +11,7 @@
         <ion-list>
             <ion-item class="item-input">
                 <span class="input-label">账号</span>
-                <input type="text"  ng-model="employ.userID" required  placeholder="请输入账号">
+                <input type="text"  ng-model="employ.userName" required  placeholder="请输入账号">
             </ion-item>
 
             <ion-item class="item-input">
@@ -24,7 +24,7 @@
             </ion-item>
             <ion-item class="item-input">
                 <span class="input-label">电话</span>
-                <input type="text" ng-model="employ.phone" ng-required="true" placeholder="请输入电话">
+                <input type="text" ng-model="employ.tel" ng-required="true" placeholder="请输入电话">
             </ion-item>
 
         </ion-list>
