--- a/src/main/webapp/weixin/front/templates/admin/customerDetail.html
+++ b/src/main/webapp/weixin/front/templates/admin/customerDetail.html
@@ -33,6 +33,13 @@
                 <span class="input-label">地址</span>
                 <input type="text" ng-model="myInfo.addr" placeholder="请输入地址">
             </ion-item>
+
+            <!---这里为隐藏提示--->
+            <ion-item class="item-input" ng-show="myValid.addr">
+                <span class="input-label"></span>
+                <div class="error assertive" ng-show="myValid.addr">地址不能为空</div>
+            </ion-item>
+
         </ion-list>
     </ion-content>
 </ion-view>
