--- a/src/main/webapp/weixin/front/templates/admin/employAdd.html
+++ b/src/main/webapp/weixin/front/templates/admin/employAdd.html
@@ -8,7 +8,7 @@
             <ion-list>
                 <ion-item class="item-input">
                     <span class="input-label">账号</span>
-                    <input type="text"  ng-model="employ.userID" required  placeholder="请输入账号">
+                    <input type="text"  ng-model="employ.userName"  required minlength="6"  placeholder="账号长度必须大于6">
                 </ion-item>
                 <ion-item class="item-input">
                     <span class="input-label">密码</span>
@@ -17,6 +17,10 @@
                 <ion-item class="item-input">
                     <span class="input-label">姓名</span>
                     <input type="text"  ng-model="employ.name" ng-required="true"  placeholder="请输入姓名">
+                </ion-item>
+                <ion-item class="item-input">
+                    <span class="input-label">手机号</span>
+                    <input type="text"  ng-model="employ.tel" ng-required="true"  placeholder="请输入手机号">
                 </ion-item>
             </ion-list>
         <br>
