--- a/src/main/webapp/weixin/front/templates/admin/undoneOrder.html
+++ b/src/main/webapp/weixin/front/templates/admin/undoneOrder.html
@@ -11,7 +11,7 @@
                 <p>{{orderdata.statusStr}}</p>
                 <i class="icon ion-chevron-right icon-accessory"></i>
 
-                <ion-option-button class="button-assertive" ng-click="remove(order)">
+                <ion-option-button class="button-assertive" ng-click="remove(orderdata)">
                     删除
                 </ion-option-button>
             </ion-item>
