配件信息添加修改删除

--- a/src/main/webapp/weixin/front/templates/admin/adminList.html
+++ b/src/main/webapp/weixin/front/templates/admin/adminList.html
@@ -25,7 +25,7 @@
                <i class="icon ion-ios-person-outline"></i>员工管理
                <i class="icon ion-ios-arrow-right"></i>
            </ion-item>
-           <ion-item class="item item-icon-left item-icon-right" href="#/fitting">
+           <ion-item class="item item-icon-left item-icon-right" href="#/admin/fitting">
                <i class="icon ion-ios-nutrition"></i>配件管理
                <i class="icon ion-ios-arrow-right"></i>
            </ion-item>
