--- a/src/main/webapp/weixin/front/templates/admin/customerDetail.html
+++ b/src/main/webapp/weixin/front/templates/admin/customerDetail.html
@@ -9,6 +9,7 @@
     </ion-nav-bar>
     <ion-content class="has-header">
         <ion-list>
+            <input ng-hide="true"  ng-model="myInfo.id" />
             <ion-item class="item-input">
                 <span class="input-label">姓名</span>
                 <input type="text"  ng-model="myInfo.name" ng-required="true"  placeholder="请输入姓名">
