--- a/src/main/webapp/weixin/front/templates/admin/fittingDetail.html
+++ b/src/main/webapp/weixin/front/templates/admin/fittingDetail.html
@@ -9,6 +9,7 @@
     </ion-nav-bar>
     <ion-content class="has-header">
         <ion-list>
+            <input ng-hide="true" ng-model="Fitting.id" />
             <ion-item class="item item-thumbnail-left item-icon-right " ng-click="">
                 <img src="cover.jpg" >
                 <span class="input-label">图片</span>
