--- a/src/main/webapp/weixin/front/templates/admin/employDetail.html
+++ b/src/main/webapp/weixin/front/templates/admin/employDetail.html
@@ -9,6 +9,7 @@
     </ion-nav-bar>
     <ion-content class="has-header">
         <ion-list>
+            <input ng-hide="true"  ng-model="employ.id" />
             <ion-item class="item-input">
                 <span class="input-label">账号</span>
                 <input type="text"  ng-model="employ.userName" required  placeholder="请输入账号">
