--- a/src/main/webapp/weixin/front/templates/admin/fittingAdd.html
+++ b/src/main/webapp/weixin/front/templates/admin/fittingAdd.html
@@ -7,7 +7,7 @@
         <form name="myForm" ng-submit="addFitting()">
             <ion-list>
                 <ion-item class="item item-thumbnail-left item-icon-right " ng-click="">
-                    <img src="cover.jpg" >
+                    <img src="../img/cover.jpg" >
                     <p2></p2>
                     <i class="icon ion-ios-arrow-right"></i>
                 </ion-item>
