--- a/src/main/webapp/weixin/front/templates/tabs.html
+++ b/src/main/webapp/weixin/front/templates/tabs.html
@@ -33,7 +33,7 @@ navigation history that also transitions its views in and out.
         </ion-side-menu-content>
         <ion-side-menu side="left" class="stable-bg" width="200">
             <ion-list>
-                <ion-item class=" item-icon-left " href="#/myInfo/1">
+                <ion-item class=" item-icon-left " href="#/myInfo">
                     <i class="icon ion-person"></i>
                     我的信息
                 </ion-item>
