--- a/src/main/webapp/weixin/front/templates/orderAdd.html
+++ b/src/main/webapp/weixin/front/templates/orderAdd.html
@@ -2,11 +2,11 @@
 
     <ion-nav-bar class="bar-positive" >
         <ion-nav-back-button >
-            <i class="ion-arrow-left-c"></i> Back
+            <i class="ion-arrow-left-c"></i>
         </ion-nav-back-button>
-        <ion-nav-buttons side="left" >
-            <button class="button button-clear icon ion-chevron-left" ng-click="orderPage()"></button>
-        </ion-nav-buttons>
+        <!--<ion-nav-buttons side="left" >-->
+            <!--<button class="button button-clear icon ion-chevron-left" ng-click="orderPage()"></button>-->
+        <!--</ion-nav-buttons>-->
 
     </ion-nav-bar>
     <ion-content class="has-header">
