--- a/src/main/webapp/weixin/front/templates/orderAdd.html
+++ b/src/main/webapp/weixin/front/templates/orderAdd.html
@@ -21,13 +21,13 @@
         </ion-list>
         <ion-list>
             <ion-item class="item-avatar-left" ng-repeat="item in items" href="#">
-                <img src={{"img/"+item.nColor+".jpg"}} >
-                <h2>{{item.nPitch+"节"+item.nPlate+"片"}}
-                    <span class="item-note">{{(item.nPitch*0.219).toFixed(3)}}米</span>
+                <img src={{"img/"+item.color+".jpg"}} >
+                <h2>{{item.nodeNum+"节"+item.tableNum+"片"}}
+                    <span class="item-note">{{(item.nodeNum*0.219).toFixed(3)}}米</span>
                 </h2>
-                <p>  <span ng-if=item.nTH==1>2.5mm</span>
-                     <span ng-if=item.nTH==2>3.0mm</span>
-                    <span class="item-note">{{(item.nPitch*0.219*item.nPlate*1.05).toFixed(3)}}平方米</span>
+                <p>  <span ng-if=item.thickness==1>2.5mm</span>
+                     <span ng-if=item.thickness==2>3.0mm</span>
+                    <span class="item-note">{{(item.nodeNum*0.219*item.tableNum*1.05).toFixed(3)}}平方米</span>
                 </p>
             </ion-item>
         </ion-list>
@@ -39,7 +39,7 @@
             <ion-item class="item-avatar-left" ng-repeat="fit in fits" href="#">
                 <img src={{fit.myFit.img}} >
                 <h2>{{fit.myFit.name}}
-                    <span class="item-note">{{fit.nNum}}</span>
+                    <span class="item-note">{{fit.num}}</span>
                 </h2>
                 <p class="">{{fit.myFit.spec}}</p>
             </ion-item>
