--- a/src/main/webapp/weixin/front/templates/order_addFitting.html
+++ b/src/main/webapp/weixin/front/templates/order_addFitting.html
@@ -14,7 +14,7 @@
 
             <label class="item item-input">
                 <span class="input-label">数量</span>
-                <input name="nNum" ng-model="fitdata.nNum" ng-value="fitdata.nNum" type="number" required ng-required="true"  placeholder="请输入数量">
+                <input name="nNum" ng-model="fitdata.num" ng-value="fitdata.num" type="number" required ng-required="true"  placeholder="请输入数量">
 
             </label>
 
