--- a/src/main/webapp/weixin/front/templates/orderProcess_deliver.html
+++ b/src/main/webapp/weixin/front/templates/orderProcess_deliver.html
@@ -8,7 +8,7 @@
         <div class="list">
             <label class="item item-input">
                 <span class="input-label">发货时间</span>
-                <input name="deliverDate" ng-model="deliver.deliverDate" ng-value="deliver.deliverDate" type="datetime-local" required >
+                <input name="deliverDate" ng-model="deliver.deliverDate" ng-value="deliver.deliverDate" type="datetime-local" placeholder="yyyy-MM-ddTHH:mm:ss" required >
             </label>
         </div>
         <br>
