--- a/src/main/webapp/weixinfront/front/templates/admin/fitting.html
+++ b/src/main/webapp/weixinfront/front/templates/admin/fitting.html
@@ -10,7 +10,7 @@
     <ion-content class="has-header">
         <div class="item item-input">
             <i class="icon ion-search placeholder-icon"></i>
-            <input type="text" ng-model="search" placeholder="搜索姓名或手机号">
+            <input type="text" ng-model="search" placeholder="搜索配件名称或者规格">
         </div>
 
         <ion-list>
