--- a/src/main/webapp/weixinfront/front/templates/orderAdd.html
+++ b/src/main/webapp/weixinfront/front/templates/orderAdd.html
@@ -37,7 +37,7 @@
         </ion-list>
         <ion-list>
             <ion-item class="item-avatar-left" ng-repeat="fit in fits" href="#">
-                <img src={{fit.myFit.img}} >
+                <img src={{fit.myFit.picture}} >
                 <h2>{{fit.myFit.name}}
                     <span class="item-note">{{fit.num}}</span>
                 </h2>
