--- a/src/main/webapp/weixinfront/front/templates/orderProcess.html
+++ b/src/main/webapp/weixinfront/front/templates/orderProcess.html
@@ -14,7 +14,7 @@
                 <input ng-model="detailData.id" ng-hide="true" value= {{detailData.id}}/>
                 <ion-item class="item item-input">
                     <span class="input-label">订单号</span>
-                    <input  type="text" ng-value="0" readonly="readonly" value= {{detailData.orderNum}}>
+                    <input  type="text" ng-value="0" readonly="readonly" value= {{detailData.id}}>
                 </ion-item>
                 <ion-item class="item item-input">
                     <span class="input-label">订单日期</span>
