--- a/src/main/webapp/weixinfront/front/templates/orderDetail.html
+++ b/src/main/webapp/weixinfront/front/templates/orderDetail.html
@@ -10,7 +10,7 @@
             <li>
                 <ion-item class="item item-input">
                     <span class="input-label">订单号</span>
-                    <input  type="text" ng-value="0" readonly="readonly" value= {{detailData.orderNum}}>
+                    <input  type="text" ng-value="0" readonly="readonly" value= {{detailData.id}}>
                 </ion-item>
                 <ion-item class="item item-input">
                     <span class="input-label">订单日期</span>
